WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100007
[EFL][WK2] ewk_view_color_picker_color_set() is leaking
https://bugs.webkit.org/show_bug.cgi?id=100007
Summary
[EFL][WK2] ewk_view_color_picker_color_set() is leaking
Sudarsana Nagineni (babu)
Reported
2012-10-22 09:14:38 PDT
We should adopt the WKStringRef returned by WKStringCreateWithUTF8CString to avoid the leak in ewk_view_color_picker_color_set().
> 1944 const WKStringRef colorString = WKStringCreateWithUTF8CString(color.serialized().utf8().data());
Attachments
Patch
(1.69 KB, patch)
2012-10-22 09:31 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-10-22 09:31:40 PDT
Created
attachment 169926
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-22 13:11:51 PDT
Comment on
attachment 169926
[details]
Patch Clearing flags on attachment: 169926 Committed
r132126
: <
http://trac.webkit.org/changeset/132126
>
WebKit Review Bot
Comment 3
2012-10-22 13:11:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug