[EFL][WK2] ewk_view_color_picker_color_set() is leaking https://bugs.webkit.org/show_bug.cgi?id=100007

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-10-22
Reviewed by Kenneth Rohde Christiansen.

Fix a leak in ewk_view_color_picker_color_set() by adopting WKStringRef
returned by WKStringCreateWithUTF8CString().

* UIProcess/API/efl/ewk_view.cpp:
(ewk_view_color_picker_color_set):

Canonical link: https://commits.webkit.org/118046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132126 268f45cc-cd09-0410-ab3c-d52691b4dbfc